kubernetes/dev/api-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-dev-service
  namespace: vidal-guillot
spec:
  selector:
    app: api-dev
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
