kubernetes/dev/frontend-dev.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-dev-service
  namespace: vidal-guillot
spec:
  selector:
    app: frontend-dev
  ports:
    - port: 80
      targetPort: 80
