kubernetes/dev/rabbitmq-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-dev-service
  namespace: vidal-guillot
spec:
  selector:
    app: rabbitmq-dev
  ports:
    - name: rabbitmqapi-dev
      port: 5672
      targetPort: 5672
    - name: management-dev
      port: 15672
      targetPort: 15672
