kubernetes/dev/redis-dev.yaml

apiVersion: v1
kind: Service
metadata:
  name: redis-dev-service
  namespace: vidal-guillot
spec:
  selector:
    app: redis-dev
  ports:
    - port: 6379
      targetPort: 6379
