kubernetes/dev/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules-dev
  namespace: vidal-guillot
spec:
  ingressClassName: nginx
  rules:
  - host: calculatrice-dev-vidal-guillot-polytech-dijon.kiowy.net
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-dev-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-dev-service
            port:
              number: 80
